@@ -904,6 +904,7 @@ class LuaContext {
       block_api_set_maximum_moves,
       switch_api_is_activated,
       switch_api_set_activated,
+      switch_api_is_locked,
       switch_api_set_locked,
       switch_api_is_walkable,
       stream_api_get_direction,
